--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
     <title>Test Matomo Local</title>
 
-    <!-- Matomo Tracking Code هنا -->
-    <script>
-      var _paq = window._paq = window._paq || [];
-      _paq.push(['trackPageView']);
-      _paq.push(['enableLinkTracking']);
-      (function() {
-        var u="https://facebooksub.matomo.cloud/";
-        _paq.push(['setTrackerUrl', u+'matomo.php']);
-        _paq.push(['setSiteId', '1']);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.async=true; 
-        g.src='https://cdn.matomo.cloud/facebooksub.matomo.cloud/matomo.js';
-        s.parentNode.insertBefore(g,s);
-      })();
-    </script>
+    <!-- Matomo -->
+<script>
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="https://facebooksub.matomo.cloud/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '1']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://cdn.matomo.cloud/facebooksub.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
+
 
 </head>
 <body>
-    <h1>Hello Matomo 🔥</h1>
+    <h1>Hello Matomo_farah 🔥</h1>
 </body>
 </html>
+
